--- a/jobly-frontend/src/JobCard.css
+++ b/jobly-frontend/src/JobCard.css
@@ -1,12 +1,13 @@
 .JobCard {
     background: rgba(255, 255, 255, 0.9);
     width: 90vw;
-    max-width: 1200px;
+    max-width: 1000px; 
     margin: 20px auto;
     padding: 25px;
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
+    box-sizing: border-box; 
 }
 
 .JobCard h3 {
